--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"axios": "^1.2.2",
+		"bcrypt": "^5.1.0",
 		"body-parser": "^1.15.2",
 		"chai": "^4.2.0",
 		"chai-http": "^4.3.0",
@@ -13,7 +15,8 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^3.2.0",
+		"mongoose": "^6.8.3"
 	},
 	"repository": {
 		"type": "git",
