--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,3 @@
-PORT=
-# NODE_ENV=test
+PORT=3000
+NODE_ENV=test
+DB=mongodb+srv://Nolas:sjLbfi9mnoe0YZZd@cluster0.xsatt4z.mongodb.net/?retryWrites=true&w=majority
